@@ -1,8 +1,8 @@
 #!/bin/sh
-#	$Id: make_math.sh,v 1.4 2007-01-30 20:37:08 pwessel Exp $
+#	$Id: make_math.sh,v 1.5 2007-09-24 16:22:43 remko Exp $
 
-# This script puts together Xmath.h from Xmath.c and Xmath.func
-# To be run from the main GMT directory.  X is either grd or gmt.
+# This script puts together Xmath.h, Xmath_def.h, Xmath_explain.h, and Xmath_man.i
+# from Xmath.c.  To be run from the GMT src directory.  X is either grd or gmt.
 #
 # Usage: make_math.sh grd|gmt [-s]
 # -s for silent operation
@@ -13,22 +13,16 @@ if [ $# = 2 ]; then	# Passed optional second argument (-s) to be silent
 	gush=0
 fi
 PRE=`echo $prefix | awk '{print toupper($1)}'`
-n_op=`grep "#define ${PRE}MATH_N_OPERATORS" ${prefix}math.c | awk '{print $3}'`
 
 if [ $gush = 1 ]; then
 	echo "Making ${prefix}math_def.h"
 fi
 rm -f ${prefix}math_def.h
 
-# First take out header records for simplicity
+# First gather operator descriptions from source file
 
-grep -v "^#" ${prefix}math.func > $$.txt
-n_actual=`cat $$.txt | wc -l`
-
-if [ $n_actual -ne $n_op ]; then
-	echo "You must first set ${PRE}MATH_N_OPERATORS to $n_actual in ${prefix}math.c"
-	exit
-fi
+grep "^/\*OPERATOR: " ${prefix}math.c | sort > $$.txt
+n_op=(`cat $$.txt | wc -l`)
 
 # Add backward compability
 
@@ -50,19 +44,22 @@ cat << EOF > ${prefix}math_def.h
  *	GNU General Public License for more details.
  *
  *	Contact info: gmt.soest.hawaii.edu
- *--------------------------------------------------------------------*/
-/*	${prefix}math_def.h is automatically generated by make_math.sh;
+ *--------------------------------------------------------------------
+ *	${prefix}math_def.h is automatically generated by make_math.sh;
  *	Do NOT edit manually!
- *
- * For backward compatibility:
  */
 
+#define ${PRE}MATH_N_OPERATORS	$n_op
+#define ${PRE}MATH_STACK_SIZE	$n_op
+
+/* For backward compatibility: */
+
 EOF
-awk '{ if ($1 == "ADD") {printf "#define ADD\t%d\n", NR-1} \
-	else if ($1 == "DIV") {printf "#define DIV\t%d\n", NR-1} \
-	else if ($1 == "MUL") {printf "#define MUL\t%d\n", NR-1} \
-	else if ($1 == "POW") {printf "#define RAISE\t%d\t/* (POW) */\n", NR-1} \
-	else if ($1 == "SUB") {printf "#define SUB\t%d\n", NR-1}}' $$.txt >> ${prefix}math_def.h
+awk '{ if ($2 == "ADD") {printf "#define ADD\t%d\n", NR-1} \
+	else if ($2 == "DIV") {printf "#define DIV\t%d\n", NR-1} \
+	else if ($2 == "MUL") {printf "#define MUL\t%d\n", NR-1} \
+	else if ($2 == "POW") {printf "#define POW\t%d\n", NR-1} \
+	else if ($2 == "SUB") {printf "#define SUB\t%d\n", NR-1}}' $$.txt >> ${prefix}math_def.h
 echo "" >> ${prefix}math_def.h
 
 # Add function declarations
@@ -70,9 +67,9 @@ echo "" >> ${prefix}math_def.h
 echo "/* Declare all functions to return int */" >> ${prefix}math_def.h
 echo "" >> ${prefix}math_def.h
 if [ $1 = "gmt" ]; then
-	awk '{ printf "void table_%s(struct GMTMATH_INFO *info, double **stack[], BOOLEAN *constant, double *factor, int last, int start, int n);\t\t/* id = %2.2d */\n", $1, NR-1}' $$.txt >> ${prefix}math_def.h
+	awk '{printf "void table_%s(struct GMTMATH_INFO *info, double **stack[], BOOLEAN *constant, double *factor, int last, int start, int n);\t\t/* id = %d */\n", $2, NR-1}' $$.txt >> gmtmath_def.h
 else
-	awk '{ printf "void grd_%s(struct GRDMATH_INFO *info, float *stack[], BOOLEAN *constant, double *factor, int last);\t\t/* id=%2.2d */\n", $1, NR-1}' $$.txt >> grdmath_def.h
+	awk '{printf "void grd_%s(struct GRDMATH_INFO *info, float *stack[], BOOLEAN *constant, double *factor, int last);\t\t/* id=%d */\n", $2, NR-1}' $$.txt >> grdmath_def.h
 fi
 echo "" >> ${prefix}math_def.h
 
@@ -80,7 +77,7 @@ echo "" >> ${prefix}math_def.h
 echo "/* Declare operator array */" >> ${prefix}math_def.h
 echo "" >> ${prefix}math_def.h
 echo "char *operator[${PRE}MATH_N_OPERATORS] = {" >> ${prefix}math_def.h
-awk '{ if (NR < '$n_op') {printf "\t\"%s\",\t\t/* id = %2.2d */\n", $1, NR-1} else {printf "\t\"%s\"\t\t/* id = %2.2d */\n", $1, NR-1}}' $$.txt >> ${prefix}math_def.h
+awk -v n_op=$n_op '{if (NR < n_op) {printf "\t\"%s\",\t\t/* id = %d */\n", $2, NR-1} else {printf "\t\"%s\"\t\t/* id = %d */\n", $2, NR-1}}' $$.txt >> ${prefix}math_def.h
 echo "};" >> ${prefix}math_def.h
 echo "" >> ${prefix}math_def.h
 
@@ -115,8 +112,8 @@ cat << EOF > ${prefix}math_explain.h
  */
 EOF
 awk '{ \
-	printf "\t\tfprintf (stderr, \"\t%s\t%d\t%s", $2, $3, $5; \
-	for (i = 6; i <= NF; i++) printf " %s", $i; \
+	printf "\t\tfprintf (stderr, \"\t%s\t%d %d\t%s", $2, $3, $4, $5; \
+	for (i = 6; i <= NF-1; i++) printf " %s", $i; \
 	printf "\\n\");\n" \
 }' $$.txt | sed -e 's/%/%%/g' >> ${prefix}math_explain.h
 
@@ -155,66 +152,28 @@ void ${prefix}math_init (PFV ops[], int n_args[], int n_out[])
 
 EOF
 if [ $1 = "gmt" ]; then
-	awk '{ printf "\tops[%d] = table_%s;\t\tn_args[%d] = %d;\t\tn_out[%d] = %d;\n", NR-1, $1, NR-1, $3, NR-1, $4}' $$.txt >> ${prefix}math.h
+	awk '{ printf "\tops[%d] = table_%s;\t\tn_args[%d] = %d;\t\tn_out[%d] = %d;\n", NR-1, $2, NR-1, $3, NR-1, $4}' $$.txt >> ${prefix}math.h
 else
-	awk '{ printf "\tops[%d]=grd_%s;\t\tn_args[%d]=%d;\t\tn_out[%d]=%d;\n", NR-1, $1, NR-1, $3, NR-1, $4}' $$.txt >> grdmath.h
+	awk '{ printf "\tops[%d] = grd_%s;\t\tn_args[%d] = %d;\t\tn_out[%d] = %d;\n", NR-1, $2, NR-1, $3, NR-1, $4}' $$.txt >> grdmath.h
 fi
 echo "}" >> ${prefix}math.h
 
 # Make man page explanation include file
-# Make sed script file used to produce even columns in grdmath or gmtmath.
-cat << EOF > $$.sed
-s/ACOSH\\fP	/ACOSH\\fP/g;
-s/ADD(+)\\fP	/ADD(+)\\fP/g;
-s/ASINH\\fP	/ASINH\\fP/g;
-s/ATAN2\\fP	/ATAN2\\fP/g;
-s/ATANH\\fP	/ATANH\\fP/g;
-s/CDIST\\fP	/CDIST\\fP/g;
-s/CHICRIT\\fP	/CHICRIT\\fP/g;
-s/CHIDIST\\fP	/CHIDIST\\fP/g;
-s/D2DX2\\fP	/D2DX2\\fP/g;
-s/D2DY2\\fP	/D2DY2\\fP/g;
-s/DILOG\\fP	/DILOG\\fP/g;
-s/DIV(\/)\\fP	/DIV(\/)\\fP/g;
-s/ERFINV\\fP	/ERFINV\\fP/g;
-s/EXTREMA\\fP	/EXTREMA\\fP/g;
-s/FCRIT\\fP	/FCRIT\\fP/g;
-s/FDIST\\fP	/FDIST\\fP/g;
-s/FLOOR\\fP	/FLOOR\\fP/g;
-s/GDIST\\fP	/GDIST\\fP/g;
-s/HYPOT\\fP	/HYPOT\\fP/g;
-s/ISNAN\\fP	/ISNAN\\fP/g;
-s/LMSSCL\\fP	/LMSSCL\\fP/g;
-s/LOG10\\fP	/LOG10\\fP/g;
-s/LOG1P\\fP	/LOG1P\\fP/g;
-s/LOWER\\fP	/LOWER\\fP/g;
-s/LSQFIT\\fP	/LSQFIT\\fP/g;
-s/MUL(x)\\fP	/MUL(x)\\fP/g;
-s/NRAND\\fP	/NRAND\\fP/g;
-s/POW(^)\\fP	/POW(^)\\fP/g;
-s/STEPT\\fP	/STEPT\\fP/g;
-s/STEPX\\fP	/STEPX\\fP/g;
-s/STEPY\\fP	/STEPY\\fP/g;
-s/SUB(-)\\fP	/SUB(-)\\fP/g;
-s/TCRIT\\fP	/TCRIT\\fP/g;
-s/TDIST\\fP	/TDIST\\fP/g;
-s/UPPER\\fP	/UPPER\\fP/g;
-s/ZCRIT\\fP	/ZCRIT\\fP/g;
-EOF
 
 if [ $gush = 1 ]; then
 	echo "Making ${prefix}math_man.i"
 fi
 awk '{ \
-	printf "\\fB%s\\fP\t\t%d\t%s", $2, $3, $5; \
+	a = $2"         ";
+	printf "\\fB%s\\fP\t%d %d\t%s", substr(a, 0, 9), $3, $4, $5; \
 	a = index($5,sprintf("%c",39)); \
-	for (i = 6; i <= NF; i++) \
+	for (i = 6; i <= NF-1; i++) \
 	{ \
 		printf " %s", $i; \
 		if(index($i,sprintf("%c",39))) ++a; \
 	} \
 	if(a) printf "\\\"%c",39; \
 	printf "\n.br\n" \
-}' $$.txt | sed -f $$.sed  > ${prefix}math_man.i
+}' $$.txt > ${prefix}math_man.i
 
-rm -f $$.txt $$.sed
+rm -f $$.txt
